--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/Text1"
         android:text="선택을 시작하겠습니다?">
-    </TextView>
+    </TextView>asd
     <CheckBox
         android:padding="20dp"
         android:layout_width="wrap_content"
