--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,17 @@
         android:id="@+id/Text1"
         android:text="선택을 시작하겠습니다?">
     </TextView>
-    <CheckBox
+    <Switch
         android:padding="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ChkAgree"
-        android:text="시작학"></CheckBox>
+        android:text="시작학"></Switch>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="좋아하는 애완동물은?"
+        android:text="좋아하는 안드로이드 버전은?"
         android:id="@+id/Text2"
         android:visibility="invisible"></TextView>
     <RadioGroup
@@ -33,21 +33,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Rdodog"
-            android:text="강아지"
+            android:text="오레오(8.0)"
             ></RadioButton>
         <RadioButton
             android:padding="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Rdorab"
-            android:text="토끼"
+            android:text="파이(9.0)"
             ></RadioButton>
         <RadioButton
             android:padding="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/Rdocat"
-            android:text="고양이"></RadioButton>
+            android:text="Q(10.0)"></RadioButton>
     </RadioGroup>
     <Button
         android:padding="20dp"
@@ -58,9 +58,21 @@
         android:visibility="invisible"></Button>
     <ImageView
         android:padding="20dp"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/Img"
         android:visibility="invisible"
         ></ImageView>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="처음으로"
+        android:id="@+id/btn1"
+        ></Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="종료"
+        android:id="@+id/btn2"
+        ></Button>
 </LinearLayout>
